2012-08-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/defintrf.spad.pamphlet,
	src/algebra/limitps.spad.pamphlet: Improve computing
	sign of elementary functions.

2012-08-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/interval.spad.pamphlet: Handle odd
	roots of negative intervals.

2012-07-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2ups.spad.pamphlet: Fix problem with
	previous commit.

2012-07-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/serexp.spad.pamphlet,
	src/algebra/fs2ups.spad.pamphlet: Fix Puiseux expansion
	via lode.

2012-07-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2ups.spad.pamphlet: Fix 'acot' series.

2012-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/puiseux.spad.pamphlet: Fix 'order'.

2012-07-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Bill Page  <bill.page@newsynthesis.org>

	* src/interp/*.boot: Replace CAR and CDR by 'first' and
	'rest'.

2012-07-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2ups.spad.pamphlet: Add special handling
	of logarithms needed by Gruntz algorithm.

2012-07-18  Raoul Bourquin  <somebody@bluewin.ch>

	* src/algebra/liouv.spad.pamphlet,
	src/algebra/special2.spad.pamphlet,
	src/algebra/fs2ups.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet,
	src/algebra/expr.spad.pamphlet: Add Shi and Chi.

2012-07-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* tex.spad.pamphlet: Fix superscripts in TeX output.

2012-07-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/lodof.spad.pamphlet,
	src/algebra/riccati.spad.pamphlet: Fix wrong factorizations.

2012-07-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/exposed.lsp.pamphlet: Expose FLIOUFUN.

2012-06-28  Krystian_Baclawski <krystian.baclawski@gmail.com>

	* configure.ac: Fix problem on recent Mac OS X.

2012-06-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
