@@ -1,3 +1,10 @@
+2012-08-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	Add univariate power series with arbitrary exponents.
+	* src/algebra/genser.spad.pamphlet: New file.
+	src/algebra/serexp.spad.pamphlet: Support new domain.
+	src/algebra/Makefile.in: Adjust.
+
 2012-08-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/defintrf.spad.pamphlet,
